--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -202,24 +202,97 @@
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page25.html">The <br>Himalayas</a></div>
-		<div><a href="page26.html">The Host</a></div>
-		<div><a href="page27.html">The Housemaid</a></div>
-		<div><a href="page28.html">The Priests</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page25.html" class="poster-stack-title">The <br>Himalayas</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page26.html" class="poster-stack-title">The Host</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page27.html" class="poster-stack-title">The Housemaid</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page28.html" class="poster-stack-title">The Priests</a>
+			</div>
+		</div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page29.html">The Taste <br> Of Money</a></div>
-		<div><a href="page30.html">The <br> Terror Live</a></div>
-		<div><a href="page31.html">The Thieves</a></div>
-		<div><a href="page32.html">The Unjust</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item poster-stack-item-3"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-4">
+				<a href="page29.html" class="poster-stack-title">The Taste <br> Of Money</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-3">
+				<a href="page30.html" class="poster-stack-title">The <br> Terror Live</a>
+			</div>
+		</div>		
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page31.html" class="poster-stack-title">The Thieves</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page32.html" class="poster-stack-title">The Unjust</a>
+			</div>
+		</div>		
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page33.html">The Wailing</a></div>
-		<div><a href="page34.html">Thirst</a></div>
-		<div><a href="page35.html">Tower</a></div>
-		<div><a href="page36.html">Tunnel</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page33.html" class="poster-stack-title">The Wailing</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page34.html" class="poster-stack-title">Thirst</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page35.html" class="poster-stack-title">Tower</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-3">
+				<a href="page36.html" class="poster-stack-title">Tunnel</a>
+			</div>
+		</div>		
 	</div>
 
 
