--- a/6_obsession/page17.html
+++ b/6_obsession/page17.html
@@ -53,7 +53,10 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has closed up image of the actress. She is staring above as if she is reminiscing. The word 'poetry' becomes a single letter when translated to Korean. The typography used for the title in this poster is accurately capturing the lyrical value of the word itself. The US version of the poster has an image of the actress reading a book in a garden. The poster's design reminds me of the cover of a DVD rather than actual movie poster.
+		<br>
+		<br>
+		The Spanish version of the poster also has an image of the actress that is similar to Korean poster. However, it is curious why the red brushstrokes are used to write the title. The red typography makes the film look like a horror film. Lastly, the U.K. version of the poster emphsizes five star ratings that the movie received. It also features the age rating in U.K. which is not usual to see in a movie poster. Overall, the Korean version is the most successful one to capture the sensitivity of the film through the image and typography.  </p>
 	</div>
 
 	<div class="next">
