--- a/6_obsession/page18.html
+++ b/6_obsession/page18.html
@@ -43,7 +43,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster features a large image of the three main actors of the film. The text on the center reads, "The battle with the unavoidable begins!" There is an image of the tower above the ocean on the poster, which is the main setting of the film. The U.S. version of the poster features enlarged image of the same tower in the Korean poster. The U.S. poster tends to focus on the setting more than the actors, because the actors are not familiar to foriegn audience.  </p>
 	</div>
 
 	<div class="next">
