--- a/6_obsession/page19.html
+++ b/6_obsession/page19.html
@@ -40,7 +40,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version and the U.S. version of the poster have different mood. The Korean version has romantic vibe, whereas the U.S. version is showing the life of a young countryside girl. According to the plot, the Japanese version seems to do a better job at portraying the young singer and her story of life in a countryside in Korea.  </p>
 	</div>
 
 	<div class="next">
