--- a/6_obsession/page20.html
+++ b/6_obsession/page20.html
@@ -51,7 +51,11 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> All six posters include the image of the lady vengeance which is unusual. The Korean version of the poster has an image of the lady walking away while looking back at something. The two colors used is iconic color of the film, which is the color of her eyeshadows. The text on the upper left corner reads, "She started moving." The U.S. version of the poster has a close up image of her eyes with red eye shadows. However, the black fabric that covers bottom half of the poster makes her look like a ninja. 
+		<br><br>
+		The Spanish version of the poster has two images of her eyes with red eyeshadow. With the text, "Life is short. Revenge is eternal," the poster is implying upcoming revenge in the movie. The Italian version of the poster has an image of the actor with three red teardrops sliding down her face. There is a green halo behind her that might be idolizing her. The poster reminds me of religious stories or paintings. 
+		<br><br>
+		The Swedish version of the poster has yellow background with red text and lady vengeance's back half of the body with gun in her hands. There is a blood mark on the bottom right corner that leads the audience to expect some murder in the movie. This poster reminds me of Kill Bill because of her posture and the color scheme used. The Japanese version of the poster has nostalgic mood. Lady vengeance is holding a mirror with her wounded hands. She is wearing the red eyeshadow as usual. This poster might erroneously give erotic mood, rather than hinting the action and revenge that occurs in the movie. All six of the posters are unique and designed well. Overall, Korean, Italian, and Spanish versions of the poster portrays the mood of the movie the best.  </p>
 	</div>
 
 	<div class="next">
