--- a/6_obsession/page21.html
+++ b/6_obsession/page21.html
@@ -41,7 +41,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has two images of the two main characters. The man on the top looks like a detective who is wire tapping a phone call. The text next to him reads, "It must be confidential to save the child!" The man on the bottom is a shaman. The text next to him reads, "Detective Kong (the man on above) is the only person who has the fate to find the child." The text between the two man reads, "Detective in action, and a shaman helping with prophecy." Above the title of the movie, there's a tagline that says "True story in 1978," which makes the audience grow curious of how the shaman and detective will resolve the crime. However, the existence of shaman is not revealed on U.S. version of the poster at all. The image of family, shaman, and detectives is dark and intense. Although it says the movie is based on true story, the lack of shaman's presence in the poster does not help differentiating the movie from hundreds of other kidnapping movies.  </p>
 	</div>
 
 	<div class="next">
