--- a/6_obsession/page22.html
+++ b/6_obsession/page22.html
@@ -41,7 +41,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> Both Korean and U.S. versions of the poster have erotic images. The setting is in early Joseon Dynasty, so everyone is wearing traditional Korean costume. The Korean poster has an image of the concubine with two men looking at her from front and back. The vertical text on the poster reads, "Dreadful palace. Sex with madness" The U.S. poster has an image of the concubine alone with her arms above as if she is inviting. Both of the posters are promoting sex, which is mostly the plot of the movie. However, the typography of the title in the Korean poster represents traditional Korean calligraphy better.  </p>
 	</div>
 
 	<div class="next">
