--- a/6_obsession/page23.html
+++ b/6_obsession/page23.html
@@ -41,7 +41,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster focuses on the two main actors of the film. They are armed in military uniform. The text in the center of the poster reads, "year 1953, when the war was finished, it was not over in here." Rather than having the image of the two actors, the U.S. version of the poster has the names of the two on the top. The image in U.S. poster has the troops of soldiers who are getting ready to fire in a smoky atmosphere. The U.S. version is more successful at capturing the action and setting of the film.  </p>
 	</div>
 
 	<div class="next">
