--- a/6_obsession/page24.html
+++ b/6_obsession/page24.html
@@ -42,7 +42,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> All of the three versions of the poster have images of the good one, the bad one, and the weird. It is hard to tell which one is which, but you can tell who the weird one is by looking at Korean and Japanese versions of the poster. The Korean poster made it more clear to get who is the good, the bad, the weird, than the other two posters. The Japanese poster is designed to look like strips of masking tapes or paper is layered. It looks like a collage that a fan of the movie would make, rather than capturing the mood of the film. On the bottom of the Japanese poster, there are three symbols, "O", "X", and "?" that will hint you of which one is which. The U.S. version of the poster reminds me of cowboy film. Just by looking at the poster, the movie looks like a hollywood film, not a Korean oen. However, the U.S. version did a great job at showing the tension between the three men and hinting about the plot with the tagline.  </p>
 	</div>
 
 	<div class="next">
