--- a/6_obsession/page25.html
+++ b/6_obsession/page25.html
@@ -41,7 +41,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster went viral in Korea when it was released. People were taking pictures with the poster in front of their faces. Because of the numerous parodies, it became funny even though he is tearing up, covered in snow. The U.S. version of the poster shows a group of people that are climbing the mountain. The image serves as a clue to the plot of the movie Himalayas. The audience can expect adventure and achievements that the actors go through while climbing the Himalayas.  </p>
 	</div>
 
 	<div class="next">
