--- a/6_obsession/page26.html
+++ b/6_obsession/page26.html
@@ -47,7 +47,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has image of the family who looks determined on the top. On the bottom is an image of River Han, which is the famous river that runs across Seoul, Korea. The white text in the center of the poster reads, "The family's struggle begins." The Korean title, if translated directly, is "Monster". However, there is no sign of monster in the Korean poster. The U.S. version of the poster has the image of monster grabbing a girl in school uniform. The U.S. version would be better to attract the audience by making them curious of the monster and how the girl will survive. </p>
 	</div>
 
 	<div class="next">
