--- a/6_obsession/page27.html
+++ b/6_obsession/page27.html
@@ -47,7 +47,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster focuses on the image of the housemaid, while three people are in the back of her. The woman behind her back on the couch is staring at the housemaid with anger. The red text on the poster reads, "It is bad to give and take it back." The U.S. version of the poster has image of the housemaid cleaning the bathtub. The shilouette of door tells the audience that someone came into see her while she is cleaning. Although the text says "A Sexy Thriller" on the U.S. poster, there is only sexy, but not thriller if the text was missing. The Korean poster is better at capturing both vengeance and sexiness of the film. </p>
 	</div>
 
 	<div class="next">
