--- a/6_obsession/page28.html
+++ b/6_obsession/page28.html
@@ -44,7 +44,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster features an image of two main priests of the film. The text in the center of the poster reads, "Seoul, 2015, the chosen became alive." It was a box office hit in Korea, and most audience knew the movie was about exorcism even before the movie premiered. Maybe it became famous too early, but there is no mention of exorcism in the Korean poster. The U.S. poster has a disturbing image of a child getting exorcism by one of the priest. A cross is pushed on the posessed child's forehead, and the child is in pain. The U.S. poster is better at gaining audience's attention becuase of the image. The audience can expect a horror film with priests and posessed one by looking at the U.S. poster.   </p>
 	</div>
 
 	<div class="next">
