--- a/6_obsession/page29.html
+++ b/6_obsession/page29.html
@@ -48,7 +48,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> All of the versions are similar in color scheme. Black and white is used, while red is the most prominent color. The Korean, Chinese, and Japanese versions of the poster have image of the four people that hints us about their relationship by their position or posture. The U.S. version of the poster is using unique yet shocking image that an old lady is lusting a young man. All of the posters are good at portraying the movie's plot, but the Korean version has the best design to attract the audience. It is not too red, but red is still prominent. The typography of the title matches the mood of the movie, and the four actors are well positioned to describe their relationship. </p>
 	</div>
 
 	<div class="next">
