--- a/6_obsession/page30.html
+++ b/6_obsession/page30.html
@@ -44,7 +44,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster failed to portray the main actor's role properly. By only looking at the Korean poster, one might think that he is trying to survive from a terror. The Japanese version of the poster is most accurate at telling the viewers what to expect. The "On Air" sign and microphone on the top tells you that he is live on a television trying to solve a problem. The U.S. version of the poster, similar to the Korean one, might falsely make the audience to think that the film is about a survival in a terrored situation. </p>
 	</div>
 
 	<div class="next">
