--- a/6_obsession/page31.html
+++ b/6_obsession/page31.html
@@ -43,7 +43,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster shows the thieves walking confidently with large bags that must be filled with stolen objects. The text above the title reads, "10 thieves, one diamond, they started moving." The chinese version of the poster has ten squares that each has a photo of the ten thieves. The division of the thieves is not ideal to describe the movie, because it might lead one to think that they are against each other. The Korean poster shows their friendship and that they are a team, not enemies.  </p>
 	</div>
 
 	<div class="next">
