--- a/6_obsession/page32.html
+++ b/6_obsession/page32.html
@@ -43,7 +43,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has three images of the actors. The orange text on the right side of the title says "You are the convited criminal from today." The composition of the texts and photos hint that it is an action film. The U.S. verision is filled with texts with the title taking over most of the space. The image of two actors standing back to each other is embedded to the text of the title. The U.S. version is wisely showing the mood of the movie and what to expect from the two actors.  </p>
 	</div>
 
 	<div class="next">
