--- a/6_obsession/page33.html
+++ b/6_obsession/page33.html
@@ -46,7 +46,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster uses images of the three actors and the setting of the movie. The photos are layered by lowered opacity. The typography used for the title is sharp and has serif, which matches the mood of the movie. The U.S. version of the poster has a image of a doorway of ancient Korean house. People might be curious of what the red light is coming out from the doorway, but it is a weak image to grab attention. </p>
 	</div>
 
 	<div class="next">
