--- a/6_obsession/page34.html
+++ b/6_obsession/page34.html
@@ -43,7 +43,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has an image of the actress standing behind the male actor who looks worried. The typography used to write the title resembles Gothic types and vampires. The Korean title of the movie, if directly translated, is "Bat". The U.S. verision of the poster has an image where the actress resembles the posture of bats. She is slightly strangling a man's neck while hanging upside down on him. The photo used for the U.S. poster is incredible and the typography used for the title also matches the mood of the film.  </p>
 	</div>
 
 	<div class="next">
