--- a/6_obsession/page35.html
+++ b/6_obsession/page35.html
@@ -43,7 +43,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the tower focuses on the actor, who is an exhausted fireman in a disasterous situation. The white text reads, "They were there in the 108 floors high skyscraper." The U.S. version of the poster eliminated the image of main actor and has the image of tower on fire with busy firemen running around. The U.S. version is accurately showing what is happening in the movie using appropriate image and texts. </p>
 	</div>
 
 	<div class="next">
