--- a/6_obsession/page36.html
+++ b/6_obsession/page36.html
@@ -41,7 +41,7 @@
 		<br>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has an close up image of the main actor's face, holding a phone in a confined space. The text above the title reads, "You can save me, right?" Although he is holding a phone, he looks hopeless. The Japanese poster has an image of the actor in a destroyed place from further away. He looks exhausted and hopeless in middle of pipes and cement. The U.S. version of the poster eliminated the photo of the actor and featured the image of the setting of the movie. The gate of tunnel if filled with ambulances, police cars, firemen and rescues workers. The disaster occuring in tunnel is well portrayed, but one might expect a story of a group of people waiting for the rescue in the tunnel. The Korean version focused too much on the actor that it did not include the setting well. The Japanese version captured both the situation and emotion of the main actor waiting for rescue in the destroyed tunnel. </p>
 	</div>
 
 	<div class="back">
