--- a/9_master/index.html
+++ b/9_master/index.html
@@ -8,33 +8,90 @@
 <body>
 	<div class="title"> A </div>
 	<img src="assets/imgs/1.png" style="width: 100%; height: auto;"> 
-	<div class="text"> APOLLO: 
-
+	<br>
+	<br>
+	<div class="text"> Apollo:
+	<div class="text">  [holding the ring representing the Zodiac]
+	<div class="text"> – Good morning everyone! 
+	<br>
+	<br>
+	<div class="text"> Hours:
+	<div class="text"> [accompannying Apollo]
+		<br>
+		<br>
 	<div class="title"> DANCE </div>
 	<img src="assets/imgs/2.png" style="width: 100%; height: auto;"> 
-	<div class="text"> APOLLO: 
-
+	<br>
+	<br>
+	<div class="text"> Aurora:
+	<div class="text"> - I am the goddess of the dawn!
+		<br>
+		<br>
 	<div class="title"> TO THE </div>
 	<img src="assets/imgs/3.png" style="width: 100%; height: auto;"> 
-	<div class="text"> APOLLO: 
-
+	<br>
+	<br>
+	<div class="text">  Saturnus:
+	<div class="text">  [playing music for the dancers on his lyre]
+		<br>
+		<br>
 	<div class="title"> MUSIC </div>
 	<img src="assets/imgs/4.png" style="width: 100%; height: auto;"> 
-	<div class="text"> APOLLO: 
-
+	<br>
+	<br>
+	<div class="text"> Pleasure: 
+	<div class="text"> [holding Wealth's hand firmly]
+	<div class="text"> - Come join us to dance! 
+	<br>
+	<br>
+	<div class="text"> Wealth:
+	<div class="text"> [reluctant to hold hands with Poverty]
+	<br>
+	<br>
+	<div class="text"> Poverty: 
+	<div class="text"> [trying to grasp Wealth's hand] 
+	<br>
+	<br>
+	<div class="text"> Dilligence:
+	<div class="text"> [turning his head to stare at Wealth]
+		<br>
+		<br>
 	<div class="title"> OF </div>
 	<img src="assets/imgs/5.png" style="width: 100%; height: auto;"> 
-	<div class="text"> APOLLO: 
-
+	<br>
+	<br>
+	<div class="text"> Young Bacchus: 
+	<div class="text"> [Looking out to the future]
+	<br>
+	<br>
+	<div class="text"> Mature Bacchus: 
+	<div class="text"> [Looking at the dancers]
+	<div class="text"> - Everything I look at becomes past. 
+		<br>
+		<br>
 	<div class="title"> TIME </div>
 	<img src="assets/imgs/6.png" style="width: 100%; height: auto;"> 
-	<div class="text"> APOLLO: 
-
+	<br>
+	<br>
+	<div class="text"> Putti 1: 
+	<div class="text"> [blowing bubbles]
+	<br>
+	<br>
+	<div class="text"> Putti 2:
+	<div class="text"> [looking at an hourglass]
+	<div class="text"> - Do they know the transience of their lives?
+		<br>
+		<br>
 	<div class="title"> BY </div>
 	<div class="title"> NICOLAS </div>
 	<div class="title"> POUSSIN </div>
 	<img src="assets/imgs/0.jpg" style="width: 100%; height: auto;"> 
+	<br>
+	<br>
+	<div class="text"> Everyone:
+	<div class="text"> - This is all transient. 
+	<br>
+	<br>
 
-	<img src="assets/imgs/gold.jpg" alt="gold">
 </body>
 </html>
