--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<br>
 		<a href="5_coding-from-life-archive/index.html" style="color: #353332; text-decoration: none;"> C.F.L ARCHIVE</a>
 		<br>
-		<a href="6_obsession/index.html" style="color: #353332; text-decoration: none;"> SYNONYM (Obsession)</a>
+		<a href="6_obsession/index.html" style="color: #353332; text-decoration: none;"> SYNONYM </a>
+		<br>
+		<a href="9_master/index.html" style="color: #353332; text-decoration: none;" > MASTERPIECE </a>
 	</div>
 	<img src="paper.png" alt="paper">
 
