--- a/9_master/index.html
+++ b/9_master/index.html
@@ -66,7 +66,7 @@
 	<br>
 	<div class="text"> Mature Bacchus: 
 	<div class="text"> [Looking at the dancers]
-	<div class="text"> - Everything I look at becomes past. 
+	<div class="text"> - Everything I look at becomes the past. 
 		<br>
 		<br>
 	<div class="title"> TIME </div>
