--- a/8_js_exercise/index.html
+++ b/8_js_exercise/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title> JS EXERCISE </title>
+	<meta charset="utf-8">
+	<script src="index.js"></script>
 </head>
 <body>
-	<script src="index.js"></script>
+	Javascript Exercise
 </body>
 </html>
