--- a/10_archive/index.html
+++ b/10_archive/index.html
@@ -7,22 +7,44 @@
 </head>
 <body>
 
-	<div class="head">JAHYUN LEE'S </div>
-	<img src="assets/imgs/1.png" style="width: 100%; height: auto;">
-	<div class="subhead"> <a href="https://leej312.github.io/studio/obsession/index.html" style="color: black"> DISTRACTION</a> is a digital archive of photos with unexpected scenes. <br> The random shapes that lies upon each photo lets the viewers to discover the unexpected scene by avoiding the movement of cursor.  </div>
+	<div class="head">Jahyun Lee's </div>
+	<img src="assets/imgs/1.png" style="width: 80%; height: auto; padding-left: 10%;">
+	<br><br><br><br><br><br><br><br>
 
-	<div class="number"> 1. Index page </div>
-		<img src="assets/imgs/2.png" style="width: 100%; height: auto; padding-top: 2%;">
-		<div class="subsubhead"> The index page has two buttons on the menu bar. <br> "Home" button lets you to come back to the index page. <br> "Photo Index" button takes you to the page that has <br> all of the photos in the archive. <br> <br> The two arrows, on left and right, will take you to <br> one of the photos in the archive with the shapes upon it.
+	<div class="subhead"> What is DISTRACTION? </div>
+		<div class="toptext"> <a href="https://leej312.github.io/studio/obsession/index.html" style="color: black"> DISTRACTION</a> is a digital archive of photos with unexpected scenes. <br> The random shapes lie upon each photo to let the users to interact and discover the unexpected scene by using the movement of cursor.  </div>
+
+	<div class="subhead"> Exploration </div>
+		<div class="number"> 1. Index page </div>
+			<img src="assets/imgs/2.png" style="padding-left: 10%; width: 80%; height: auto; padding-top: 2%;">
+			<div class="text"> The index page has two buttons on the menu bar. <br> "Home" button lets you to come back to the index page. <br> "Photo Index" button takes you to the page that has <br> all of the photos in the archive. <br> <br> The two arrows, on left and right, will take you to <br> one of the photos in the archive with the shapes upon it.
+			<br><br><br><br><br>
+
+		<div class="number"> 2. Photo Index </div>
+			<img src="assets/imgs/3.png" style="width: 80%; height: auto; padding-top: 2%;">
+			<div class="text"> The Photo Index page has all of the photos in the archive. 
+			<br>This page gives the viewers a full view of the selected photos. 
+			<br><br><br><br><br>
+
+		<div class="number"> 3. Photos </div>
+			<div class="text" style="padding-top: 0%;"> Here are some photos from the archive. </div>
+			<img src="assets/imgs/4.png" style="width: 80%; height: auto; padding-top: 2%;">
+			<img src="assets/imgs/5.png" style="width: 80%; height: auto; padding-top: 2%;">
+			<img src="assets/imgs/6.png" style="width: 80%; height: auto; padding-top: 2%;">
+			<div class="text"> <br> You can scroll down a little to see more information* of the photos.</div>
+			<img src="assets/imgs/7.png" style="width: 80%; height: auto; padding-top: 2%;">
+			<br><br><br><br><br>
+		<div class="number"> 4. Interaction </div>
+			<VIDEO width="80%" height="auto" controls>
+			<source src="assets/imgs/distraction.mp4" type="video/mp4">
+			</VIDEO>
+			<div class="text"> The shapes on the photos avoid following cursor's movement. <br>The distraction lets users to interact with the archive by<br> letting the users to find unexpected scene in the photos.	<br><br>
+			<br><br><br><br><br>
+
+	<div class="subhead"> Links </div>
+		<div class="number"> 1. <a href="https://leej312.github.io/studio/obsession/index.html" style="color: black; text-decoration: none;">DISTRACTION</a> </div>
+		<div class="number"> 2. <a href="https://leej312.github.io/" style="color: black; text-decoration: none;">Jahyun Lee's Homepage</a> </div>
 		<br><br><br><br><br>
 
-	<div class="number"> 2. Photo Index </div>
-		<img src="assets/imgs/3.png" style="width: 100%; height: auto; padding-top: 2%;">
-		<div class="subsubhead"> The Photo Index page has all of the photos in the archive. 
-		<br>This page gives the viewers a full view of the selected photos. 
-		<br><br><br><br><br>
-
-	<div class="number"> 3. Photos </div>
-		<img src="">
 </body>
 </html>
