--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<a href="6_obsession/index.html" style="color: #353332; text-decoration: none;"> SYNONYM </a>
 		<br>
 		<a href="9_master/index.html" style="color: #353332; text-decoration: none;" > MASTERPIECE </a>
+		<br>
+		<a href="10_archive/index.html" style="color: #353332; text-decoration: none;" > INTRO TO DISTRACTION </a>
 	</div>
 	<img src="paper.png" alt="paper">
 
