--- a/8_js_exercise/index.html
+++ b/8_js_exercise/index.html
@@ -3,9 +3,10 @@
 <head>
 	<title> JS EXERCISE </title>
 	<meta charset="utf-8">
-	<script src="index.js"></script>
 </head>
 <body>
 	Javascript Exercise
+	<script src="index.js"></script>
+</body>
 </body>
 </html>
