--- a/11_js_quiz/index.html
+++ b/11_js_quiz/index.html
@@ -5,7 +5,11 @@
 	<meta charset="utf-8">
 </head>
 <body>
+	<button onclick="myFunction()"> Click </button>
+	<p id="days"></p>
 
-	<script src="main.js"></script>
+	<script src="main.js">
+		
+	</script>
 </body>
 </html>
