--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<br>
 		<a href="10_archive/index.html" style="color: #353332; text-decoration: none;" > INTRO TO DISTRACTION </a>
 		<br>
+		<a href="13_dream/index.html" style="color: #353332; text-decoration: none;"> 00:00 </a>
+		<br>
+
 	</div>
 	<img src="paper.png" alt="paper">
 
