--- a/13_dream/index.html
+++ b/13_dream/index.html
@@ -32,6 +32,10 @@
 </head>
 <body>
 
+	<video autoplay muted loop id="myVideo">
+  		<source src="imgs/rain.mp4" type="video/mp4">
+	</video>
+
 	<div class="title"> 00:00 </div>
 
 	<div class="waveform-container">
